Added activity section

--- a/index.html
+++ b/index.html
@@ -703,6 +703,39 @@
       </div>
     </div>
 
+    <div id="activity">
+      <div class="container activities-section">
+        <h2>ACTIVITES</h2>
+        <ul>
+          <li class="activity">
+            Experience Korean nightlife in Seoul's many bars and clubs,
+            especially in areas like Hongdae and Itaewon
+          </li>
+          <li class="activity">
+            Visit a Korean-style karaoke, or "noraebang," with friends and sing
+            your heart out.
+          </li>
+          <li class="activity">
+            Go shopping in one of Korea's many shopping districts like
+            Myeongdong, Dongdaemun or Namdaemun
+          </li>
+          <li class="activity">
+            Try a Korean spa, or jjimjilbang, for a unique Korean experience
+          </li>
+          <li class="activity">
+            Attend a K-Pop concert or visit one of Korea's many music venues
+          </li>
+          <li class="activity">
+            Visit an animal cafe to play with the pets and socialize with friends
+          </li>
+          <li class="activity">
+            Go to a PC bang that internet cafes that are designed primarily for gaming
+          </li>
+
+        </ul>
+      </div>
+    </div>
+
     <script>
       window.addEventListener("scroll", function () {
         var element = document.querySelector(".map-section");
