--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Dream Travel Destination | South Korea</title>
+    <title>🏔 My Dream Travel Destination | South Korea</title>
 
     <script
       src="https://kit.fontawesome.com/9a3becb4d0.js"
@@ -84,6 +84,7 @@
 
       .nav {
         background-color: var(--tertiary-color);
+        padding: 10px;
       }
 
       .nav-link {
